--- a/scaling2s.html
+++ b/scaling2s.html
@@ -7,7 +7,7 @@
 <body>
 
 <div id="container">
-  <video id='vid' muted loop autoplay src="avsync_60fps_60s.mp4"></video>
+  <video id='vid' muted loop autoplay src="./video/avsync_60fps_60s.mp4"></video>
   <div id="meta">Lorem Ipsum</div>
 </div>
 
