eme test - clear key

--- a/lgtest1.html
+++ b/lgtest1.html
@@ -11,7 +11,8 @@
         </video>
         <script>        
         var LIMIT = 1;
-        var keySystem = 'com.widevine.alpha';
+        var keySystem = 'org.w3.clearkey';
+        //var keySystem = 'com.widevine.alpha';
         var text = document.getElementById('log');
         var info = document.getElementById('info');
         var video = document.getElementById('video');
