eme test - clear key

--- a/lgtest1.html
+++ b/lgtest1.html
@@ -105,7 +105,7 @@
         
         function createSession(mediaKey) {
         	session = mediaKey.createSession();
-        	session.generateRequest('cenc', initData).then(next, log);
+        	//session.generateRequest('cenc', initData).then(next, log);
         }
         
         function next() {
