--- a/lgtest1.html
+++ b/lgtest1.html
@@ -105,10 +105,12 @@
         
         function createSession(mediaKey) {
         	session = mediaKey.createSession();
-        	//session.generateRequest('cenc', initData).then(next, log);
+/*
+        	session.generateRequest('cenc', initData).then(next, log);
         }
         
         function next() {
+*/
         	count++;
         	log('Succeed:' + count);
         	if (session) {
