--- a/lgtest1.html
+++ b/lgtest1.html
@@ -25,13 +25,20 @@
       		videoCapabilities: [{contentType: 'video/mp4; codecs="avc1.4d4015"', robustness: "HW_DECODE_ALL"},
       		                    {contentType: 'video/mp4; codecs="avc1.4d4015"', robustness: "SW_SECURE_DECODE"}],
 		}]; 
-		*/
 		var config = [{
       		initDataTypes: ['cenc', 'webm'],
       		audioCapabilities: [{contentType: 'audio/mp4; codecs="mp4a.40.5"'},
       							{contentType: 'audio/mp4; codecs="mp4a.40.2"'}],
       		videoCapabilities: [{contentType: 'video/mp4; codecs="avc1.4d4015"'},
       		                    {contentType: 'video/mp4; codecs="avc1.4d4015"'}],
+        }];
+		*/
+
+        var config = [{
+          initDataTypes: ['webm'],
+          videoCapabilities: [{
+            contentType: 'video/webm; codecs="vp8"'
+          }]
         }];
 
 		var initData = new Uint8Array(
@@ -45,6 +52,7 @@
 		76, 0, 62, 0, 104, 0, 116, 0, 116, 0, 112, 0, 115, 0, 58, 0, 47, 0, 47, 0, 119, 0, 119, 0, 119, 0, 46, 0, 121, 0, 111, 0, 117, 0, 116, 0, 117, 0, 98, 0, 101, 0, 46, 0, 99, 0, 111, 0, 109, 0, 47, 0, 97, 0, 112, 0, 105, 0, 47, 0, 100, 0, 114, 0, 109, 0, 47, 0, 112, 0, 108, 0, 97, 0, 121, 0, 114, 0, 101, 0, 97, 0, 100, 0, 121, 0, 63, 0, 115, 0, 111, 0, 117, 0, 114, 0, 99, 0, 101, 0,
 		61, 0, 89, 0, 79, 0, 85, 0, 84, 0, 85, 0, 66, 0, 69, 0, 38, 0, 97, 0, 109, 0, 112, 0, 59, 0, 118, 0, 105, 0, 100, 0, 101, 0, 111, 0, 95, 0, 105, 0, 100, 0, 61, 0, 88, 0, 122, 0, 82, 0, 101, 0, 86, 0, 120, 0, 99, 0, 74, 0, 70, 0, 81, 0, 81, 0, 46, 0, 48, 0, 60, 0, 47, 0, 76, 0, 65, 0, 95, 0, 85, 0, 82, 0, 76, 0, 62, 0, 60, 0, 47, 0, 68, 0, 65, 0, 84, 0, 65, 0,
 		62, 0, 60, 0, 47, 0, 87, 0, 82, 0, 77, 0, 72, 0, 69, 0, 65, 0, 68, 0, 69, 0, 82, 0, 62, 0]);
+		var initData2 = new Uint8Array([48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 48, 49, 50, 51, 52, 53]);
 		var count = 0;
 
         function log(e) {
@@ -105,12 +113,11 @@
         
         function createSession(mediaKey) {
         	session = mediaKey.createSession();
-/*
-        	session.generateRequest('cenc', initData).then(next, log);
+        	//session.generateRequest('cenc', initData).then(next, log);
+        	session.generateRequest('webm', initData2).then(next, log);
         }
         
         function next() {
-*/
         	count++;
         	log('Succeed:' + count);
         	if (session) {
