--- a/w3c/encrypted-media/drm-mp4-playback-temporary-encrypted-clear.https.html
+++ b/w3c/encrypted-media/drm-mp4-playback-temporary-encrypted-clear.https.html
@@ -26,7 +26,7 @@
     <script src=./scripts/playback-temporary.js></script>
 
   </head>
-  <body>
+  <body style="background-color:white;">
     <div id='log'></div>
 
     <div id='video'>
