fix test case title

--- a/w3c/encrypted-media/drm-mp4-playback-temporary-encrypted-clear.https.html
+++ b/w3c/encrypted-media/drm-mp4-playback-temporary-encrypted-clear.https.html
@@ -45,7 +45,7 @@
                         audioType:          contentitem.audio.type,
                         videoType:          contentitem.video.type,
                         initDataType:       contentitem.initDataType,
-                        testcase:           'single key, clear then encrypted content',
+                        testcase:           'single key, encrypted then clear content',
                         duration:           4 };
 
         runTest(config);
