--- a/widevine/index.html
+++ b/widevine/index.html
@@ -3,13 +3,24 @@
 <video id="test">
 <script>
 console.log('navigator.requestMediaKeySystemAccess');
-navigator.requestMediaKeySystemAccess('com.widevine.alpha',
-[
-  {
-    initDataTypes: ['webm'],
-    videoCapabilities: [{ contentType: 'video/webm; codecs="vp9"' }],
-  }
-]).then(
+let basicVideoCapabilities = [
+  {contentType: 'video/mp4; codecs="avc1.42E01E"'},
+  {contentType: 'video/webm; codecs="vp8"'}
+];
+
+let basicConfig = {
+  videoCapabilities: basicVideoCapabilities
+};
+let offlineConfig = {
+  videoCapabilities: basicVideoCapabilities,
+  persistentState: 'required',
+  sessionTypes: ['persistent-license']
+};
+
+// Try the offline config first, then fall back to the basic config.
+let configs = [offlineConfig, basicConfig];
+
+navigator.requestMediaKeySystemAccess('com.widevine.alpha', configs).then(
   function(keySystemAccess) {
     console.log('keySystemAccess', keySystemAccess);
     console.log('keySystemAccess:conf', keySystemAccess.getConfiguration());
