--- a/playready/test/index.html
+++ b/playready/test/index.html
@@ -15,8 +15,7 @@ let basicConfig = {
 };
 let offlineConfig = {
   videoCapabilities: basicVideoCapabilities,
-  persistentState: 'required',
-  sessionTypes: ['persistent-license']
+  distinctiveIdentifier : "required"
 };
 
 // Try the offline config first, then fall back to the basic config.
