--- a/test-case/18331.html
+++ b/test-case/18331.html
@@ -2,6 +2,9 @@
 <head>
 <script src="shaka-player.compiled.js"></script>
 <script>
+var widevine_test = false;
+var playready_test = false;
+
 function loadPlayer() {
   // Install built-in polyfills to patch browser incompatibilities.
   shaka.polyfill.installAll();
@@ -16,13 +19,27 @@ function loadPlayer() {
   // Create a Player instance.
   var video = document.getElementById('player');
   var player = new shaka.Player(video);
-  player.configure({
-    drm: {
-      servers: {
-        'com.widevine.alpha': 'https://cwip-shaka-proxy.appspot.com/no_auth'
+  var uri = "";
+  
+  if (widevine_test) {
+    uri = "https://demo.unified-streaming.com/video/tears-of-steel/tears-of-steel-dash-widevine.ism/.mpd";
+    player.configure({
+      drm: {
+        servers: {
+          'com.widevine.alpha': 'https://cwip-shaka-proxy.appspot.com/no_auth'
+        }
       }
-    }
-  });
+    });
+  } else if (playready_test) {
+    uri = "https://demo.unified-streaming.com/video/tears-of-steel/tears-of-steel-dash-playready.ism/.mpd";
+    player.configure({
+      drm: {
+        servers: {
+          'com.microsoft.playready': 'https://test.playready.microsoft.com/service/rightsmanager.asmx?PlayRight=1&UseSimpleNonPersistentLicense=1'
+        }
+      }
+    });
+  }
 
   // Attach player to the window to make it easy to access in the JS console.
   window.player = player;
@@ -30,7 +47,6 @@ function loadPlayer() {
   // Listen for error events.
   player.addEventListener('error', onErrorEvent);
 
-  var uri = "https://demo.unified-streaming.com/video/tears-of-steel/tears-of-steel-dash-widevine.ism/.mpd";
   // Try to load a manifest.
   // This is an asynchronous process.
   player.load(uri).then(function() {
@@ -82,7 +98,10 @@ function load() {
   document.querySelector('#player').setAttribute("autoplay", "");
   loadPlayer();
   document.querySelector('#player').addEventListener("timeupdate", timeupdate_handler);
-  trace.log("load");
+  var drm_string = "";
+  if (widevine_test) drm_string ="widevine"; 
+  if (playready_test) drm_string ="playready"; 
+  trace.log("load " + drm_string + " contents");
 }
 
 function check_time(time) {
@@ -129,25 +148,30 @@ function pause() {
  
 var pause_test = false;
 var seek_test = false;
-var loop_test = false;
 function timeupdate_handler() {
   document.querySelector('#info').textContent = "currentTime: " + document.querySelector('#player').currentTime;
   if (pause_test == false && check_time(10)) {
-	pause_test = true;
+	  pause_test = true;
     pause(); 
   }
   if (seek_test == false && check_time(15)) {
-	seek_test = true;
+	  seek_test = true;
     seek(30); 
   }
-  if (loop_test) {
-	  document.querySelector('#player').addEventListener("seeked", seeked_handler);
-    var top = parseInt(document.querySelector('#video').style.top);
-    document.querySelector('#video').style.top = top + 5;
+  if (check_time(50)) {
+	  if (widevine_test) {
+      widevine_test = false;
+      unload_media();
+      playready_test = true;
+      load();
+    }
+	  if (playready_test) {
+      playready_test = false;
+      unload_media();
+    }
   }
 }
 
-var loop_count = 0;
 function unload_media() {
   trace.log("unload");
   unloadPlayer();
@@ -158,28 +182,15 @@ function seeked_handler() {
   loop_count += 1;
   trace.log("loop count = " + loop_count);
   document.querySelector('#video').style.top = -300;
-  if (loop_count == 3) {
-    setTimeout(unload_media, 2000);
-  }
 }
 
 function ended_handler() {
   trace.log("ended");
   unloadPlayer();
-  loop();
-}
-
-function loop() {
-  loop_test = true;
-  trace.clearLog();
-  trace.log("test loop and autoplay and video position update");
-  document.querySelector('#player').setAttribute("loop", "");
-  document.querySelector('#player').setAttribute("autoplay", "");
-  document.querySelector('#video').style.top = -300;
-  loadPlayer();
 }
 
 function test() {
+  widevine_test = true;
   load();
 }
 test();
