--- a/test-case/18331.html
+++ b/test-case/18331.html
@@ -41,6 +41,13 @@ function loadPlayer() {
         }
       }
     });
+    player.getNetworkingEngine().registerRequestFilter(function(type, request) {
+      // Only add headers to license requests:
+      if (type == shaka.net.NetworkingEngine.RequestType.LICENSE) {
+        // This is the specific header name and value the server wants:
+        request.headers['X-AxDRM-Message'] = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ2ZXJzaW9uIjoxLCJjb21fa2V5X2lkIjoiYjMzNjRlYjUtNTFmNi00YWUzLThjOTgtMzNjZWQ1ZTMxYzc4IiwibWVzc2FnZSI6eyJ0eXBlIjoiZW50aXRsZW1lbnRfbWVzc2FnZSIsImtleXMiOlt7ImlkIjoiOWViNDA1MGQtZTQ0Yi00ODAyLTkzMmUtMjdkNzUwODNlMjY2IiwiZW5jcnlwdGVkX2tleSI6ImxLM09qSExZVzI0Y3Iya3RSNzRmbnc9PSJ9XX19.4lWwW46k-oWcah8oN18LPj5OLS5ZU-_AQv7fe0JhNjA';
+      }
+    });
   }
 
   // Attach player to the window to make it easy to access in the JS console.
