--- a/test-case/18331.html
+++ b/test-case/18331.html
@@ -31,21 +31,25 @@ function loadPlayer() {
       }
     });
   } else if (playready_test) {
-          //'com.microsoft.playready': 'https://test.playready.microsoft.com/service/rightsmanager.asmx?PlayRight=1&UseSimpleNonPersistentLicense=1'
-    //uri = "https://demo.unified-streaming.com/video/tears-of-steel/tears-of-steel-dash-playready.ism/.mpd";
-    uri = "https://media.axprod.net/TestVectors/v7-MultiDRM-SingleKey/Manifest.mpd";
-    player.configure({
-      drm: {
-        servers: {
-          'com.microsoft.playready': 'https://drm-playready-licensing.axtest.net/AcquireLicense'
-        }
-      }
-    });
+    // uri = "https://demo.unified-streaming.com/video/tears-of-steel/tears-of-steel-dash-playready.ism/.mpd";
+    //'com.microsoft.playready': 'https://test.playready.microsoft.com/service/rightsmanager.asmx?PlayRight=1&UseSimpleNonPersistentLicense=1'
+    // uri = "https://media.axprod.net/TestVectors/v7-MultiDRM-SingleKey/Manifest.mpd";
+    // 'com.microsoft.playready': 'https://drm-playready-licensing.axtest.net/AcquireLicense'
+/*
     player.getNetworkingEngine().registerRequestFilter(function(type, request) {
       // Only add headers to license requests:
       if (type == shaka.net.NetworkingEngine.RequestType.LICENSE) {
         // This is the specific header name and value the server wants:
         request.headers['X-AxDRM-Message'] = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ2ZXJzaW9uIjoxLCJjb21fa2V5X2lkIjoiYjMzNjRlYjUtNTFmNi00YWUzLThjOTgtMzNjZWQ1ZTMxYzc4IiwibWVzc2FnZSI6eyJ0eXBlIjoiZW50aXRsZW1lbnRfbWVzc2FnZSIsImtleXMiOlt7ImlkIjoiOWViNDA1MGQtZTQ0Yi00ODAyLTkzMmUtMjdkNzUwODNlMjY2IiwiZW5jcnlwdGVkX2tleSI6ImxLM09qSExZVzI0Y3Iya3RSNzRmbnc9PSJ9XX19.4lWwW46k-oWcah8oN18LPj5OLS5ZU-_AQv7fe0JhNjA';
+      }
+    });
+*/
+    uri = "https://amssamples.streaming.mediaservices.windows.net/622b189f-ec39-43f2-93a2-201ac4e31ce1/BigBuckBunny.ism/manifest(format=mpd-time-csf)";
+    player.configure({
+      drm: {
+        servers: {
+          'com.microsoft.playready': 'https://amssamples.keydelivery.mediaservices.windows.net/PlayReady/'
+        }
       }
     });
   }
