--- a/test-case/18331.html
+++ b/test-case/18331.html
@@ -31,8 +31,6 @@ function loadPlayer() {
       }
     });
   } else if (playready_test) {
-    // uri = "https://demo.unified-streaming.com/video/tears-of-steel/tears-of-steel-dash-playready.ism/.mpd";
-    //'com.microsoft.playready': 'https://test.playready.microsoft.com/service/rightsmanager.asmx?PlayRight=1&UseSimpleNonPersistentLicense=1'
     // uri = "https://media.axprod.net/TestVectors/v7-MultiDRM-SingleKey/Manifest.mpd";
     // 'com.microsoft.playready': 'https://drm-playready-licensing.axtest.net/AcquireLicense'
 /*
@@ -44,11 +42,11 @@ function loadPlayer() {
       }
     });
 */
-    uri = "https://amssamples.streaming.mediaservices.windows.net/622b189f-ec39-43f2-93a2-201ac4e31ce1/BigBuckBunny.ism/manifest(format=mpd-time-csf)";
+    uri = "https://demo.unified-streaming.com/video/tears-of-steel/tears-of-steel-dash-playready.ism/.mpd";
     player.configure({
       drm: {
         servers: {
-          'com.microsoft.playready': 'https://amssamples.keydelivery.mediaservices.windows.net/PlayReady/'
+          'com.microsoft.playready': 'https://test.playready.microsoft.com/service/rightsmanager.asmx?PlayRight=1&UseSimpleNonPersistentLicense=1'
         }
       }
     });
