--- a/test-case/18648-extra1-widevine.html
+++ b/test-case/18648-extra1-widevine.html
@@ -93,7 +93,7 @@ function load() {
   trace.log("load widevine contents");
 }
 
-unction timeupdate_handler() {
+function timeupdate_handler() {
   document.querySelector('#info').textContent = "currentTime: " + document.querySelector('#player').currentTime;
 }
 
