--- a/test-case/18648.html
+++ b/test-case/18648.html
@@ -76,6 +76,7 @@ function onErrorEvent(event) {
 function onError(error) {
   // Log the error.
   console.error('Error code', error.code, 'object', error);
+  trace.log('Error code', error.code, 'object', error);
 }
 
 function unloadPlayer(callback) {
