--- a/test-case/15790.html
+++ b/test-case/15790.html
@@ -1,7 +1,8 @@
 <html>
 <body style="background-color:white;">
+<h3>WebMedia Test EME VP9 profile capabilities</h3>
 <div id="output" class="output">
-  <pre style="font-size:22px;" id="log"></pre>
+  <pre style="font-size:16px;" id="log"></pre>
 </div>
  
 <script>
@@ -19,31 +20,30 @@ var trace = {
   },
 };
 
-function query(para) {
-  navigator.requestMediaKeySystemAccess('com.widevine.alpha', 
-    [{ initDataTypes: ['webm'], videoCapabilities: [{ contentType: para }]}]
-  ).then(
-    function(keySystemAccess) { 
-      trace.log("navigator.requestMediaKeySystemAccess(keysystem, '" + para + "')");
-      trace.log("=> Supported (videoCapabilities:" +JSON.stringify(keySystemAccess.getConfiguration().videoCapabilities) + ")");
-    }
-  ).catch(
-    function(error) {
-      trace.log("navigator.requestMediaKeySystemAccess(keysystem, '" + para + "')");
-      trace.log("=> Not Suppored ("+error+")");
-    }
-  );
+function query(para, expected) {
+  var result = MediaSource.isTypeSupported(para);
+  trace.log((result == expected ? "PASS":"FAIL") + " : MediaSource.isTypeSupported('" + para + "')" + " = " + result);
+  return result == expected;
+}
+
+var capabilities_expected_true = [
+  'video/webm; codecs="vp9"',
+  'video/webm; codecs="vp9.2"',
+  'video/webm; codecs="vp09.02.10.08"'
 }
 
 function test() {
-  trace.log('-----------------------------------------------------');
-  trace.log(' navigator.requestMediaKeySystemAccess Test Case');
-  trace.log('-----------------------------------------------------');
-  query('video/webm; codecs="vp9"');
-  query('video/webm; codecs="vp9.2"');
-  query('video/webm; codecs="vp09.02.10.08"');
+  fail_count = 0;
+  trace.log('-----------------------------------------');
+  trace.log('EME VP9 profile Case (expected True)');
+  trace.log('-----------------------------------------');
+  for (var i = 0; i < capabilities_expected_true.length; i++)
+    if (!query(capabilities_expected_true[i], true))
+      fail_count += 1;
+  trace.log('-----------------------------------------');
+
+  return !(fail_count > 0);
 }
-test();
 </script>
 </body>
 </html>
