--- a/test-case/15790.html
+++ b/test-case/15790.html
@@ -20,29 +20,42 @@ var trace = {
   },
 };
 
-function query(para, expected) {
-  var result = MediaSource.isTypeSupported(para);
-  trace.log((result == expected ? "PASS":"FAIL") + " : MediaSource.isTypeSupported('" + para + "')" + " = " + result);
-  return result == expected;
-}
-
 var capabilities_expected_true = [
   'video/webm; codecs="vp9"',
   'video/webm; codecs="vp9.2"',
   'video/webm; codecs="vp09.02.10.08"'
 ];
 
-function test() {
+async function query() {
   fail_count = 0;
   trace.log('-----------------------------------------');
   trace.log('EME VP9 profile Case (expected True)');
   trace.log('-----------------------------------------');
-  for (var i = 0; i < capabilities_expected_true.length; i++)
-    if (!query(capabilities_expected_true[i], true))
+  for (var data of capabilities_expected_true) {
+    try {
+      mksa = await navigator.requestMediaKeySystemAccess('com.widevine.alpha', 
+        [{ initDataTypes: ['webm'], videoCapabilities: [{ contentType: data }]}]
+      );
+      if (mksa) {
+        trace.log("navigator.requestMediaKeySystemAccess(keysystem, '" + data + "')");
+        trace.log("=> Supported (videoCapabilities:" +JSON.stringify(mksa.getConfiguration().videoCapabilities) + ")");
+      }
+    } catch(error) {
+      trace.log("navigator.requestMediaKeySystemAccess(keysystem, '" + data + "')");
+      trace.log("=> Not Suppored ("+error+")");
       fail_count += 1;
+    }
+  }
   trace.log('-----------------------------------------');
 
   return !(fail_count > 0);
+}
+
+var result = false;
+query().then(function(a) { console.log("result=", a);result = a; });
+
+function test() {
+  return result;
 }
 </script>
 </body>
