--- a/test-case/18648-extra2-playready.html
+++ b/test-case/18648-extra2-playready.html
@@ -18,11 +18,11 @@ function loadPlayer() {
   var player = new shaka.Player(video);
   var uri = "";
 
-  uri = "https://demo.unified-streaming.com/video/tears-of-steel/tears-of-steel-dash-playready.ism/.mpd";
+  uri = "https://profficialsite.origin.mediaservices.windows.net/c51358ea-9a5e-4322-8951-897d640fdfd7/tearsofsteel_4k.ism/manifest(format=mpd-time-csf)";
   player.configure({
     drm: {
       servers: {
-        'com.microsoft.playready': 'https://test.playready.microsoft.com/service/rightsmanager.asmx?PlayRight=1&UseSimpleNonPersistentLicense=1'
+        'com.microsoft.playready': 'https://test.playready.microsoft.com/service/rightsmanager.asmx'
       }
     }
   });
