set dashplayer2 in eme test

--- a/eme/clearkey-hbbtv/index.html
+++ b/eme/clearkey-hbbtv/index.html
@@ -33,7 +33,7 @@ limitations under the License.
   <h1>EME: Clear Key Encryption</h1>
 
   <video autoplay controls preload="auto">
-    <source src="../video/EME/video_dash.mpd"  type="application/dash+xml" />
+    <!--<source src="../video/EME/video_dash.mpd"  type="application/dash+xml" />-->
     <!--<source src="../video/EME/video_encrypted.mp4"  type="video/mp4" />-->
     <p>This browser does not support the video element.</p>
   </video>
