--- a/dolby/index.html
+++ b/dolby/index.html
@@ -76,6 +76,14 @@ function loadPlayer() {
   var uri = test_cases[serial_no][tc_id];
   // Try to load a manifest.
   // This is an asynchronous process.
+
+  player.configure({
+    restrictions: {
+      minWidth: 640,
+      maxWidth: 1920
+    }
+  });
+
   player.load(uri).then(function() {
     // This runs if the asynchronous load is successful.
     console.log('The video has now been loaded!');
