--- a/test-case/18648.html
+++ b/test-case/18648.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<script src="shaka-player.compiled.js"></script>
+<script src="shaka-player.compiled.4.5.0.js"></script>
 <script>
 var test_result = false;
 var widevine_test = false;
