--- a/webcodecs/webgl-enc-dec/test.html
+++ b/webcodecs/webgl-enc-dec/test.html
@@ -66,7 +66,7 @@
     }
     
     function startWorker() {
-      let worker = new Worker('video-worker.js', { name: "Video worker"});
+      let worker = new Worker('video-worker-test.js', { name: "Video worker"});
       worker.onmessage = function(e) {
         // Recreate worker in case of an error
         console.log('Worker error: ' + e.data);
