Change the TC from 400×400 to 416×416 (16 align).

--- a/webcodecs/webgl-enc-dec-2/index.html
+++ b/webcodecs/webgl-enc-dec-2/index.html
@@ -17,7 +17,7 @@
   <button id="bt1" onclick="main(640, 360)">start 640x360</button>
   <button id="bt2" onclick="main(640, 368)">start 640x368</button>
   <button id="bt3" onclick="main(384, 256)">start 384x256</button>
-  <button id="bt4" onclick="main(400, 400)">start 400x400</button>
+  <button id="bt4" onclick="main(416, 416)">start 416x416 (l/c 16 align)</button>
   <button id="btr" onclick="location.reload()">reload</button></br>
   <p>
     Codec:
