--- a/test-case/18331-extra1.html
+++ b/test-case/18331-extra1.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<script src="shaka-player.compiled.js"></script>
+<script src="shaka-player-4.14.2.compiled.js"></script>
 <script>
 function loadPlayer() {
   document.getElementById('ver').innerHTML = "shaka-player:" + shaka.Player.version + "";
