--- a/multi-eme-players/wv2.html
+++ b/multi-eme-players/wv2.html
@@ -100,7 +100,7 @@ function unloadPlayer(callback) {
 </script>
 </head>
 <body style="background-color:white;">
-<h1>Test MSE multi encrypted contents (widevine: main_video + playready: sub_video)</h1>
+<h1>Test MSE multi encrypted contents (widevine: main_video + widevine: sub_video)</h1>
 <div id="video">
 <video loop id="player1" width='640px' height='360px' style="background-color:black;"></video>
 <video loop id="player2" width='640px' height='360px' style="background-color:black;"></video></br>
